--- a/index.html
+++ b/index.html
@@ -6,10 +6,137 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Šachy</title>
+	<link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
 	<h1>Šachy</h1>
+
+	<section class="hlavicka">
+		<div class="foto-Honza">
+			<img src="obrazky/hraci/honza.jpg" alt="foto-Honza">
+		</div>
+
+		<div class="foto-Adela">
+			<img src="obrazky/hraci/adela.jpg" alt="foto-Adela">
+		</div>
+
+		<h2 class="jmeno-Honza">
+			Honza
+		</h2>
+
+		<h2 class="jmeno-Adela">
+			Adéla
+		</h2>
+
+		<div class="barva-Honza">
+			<p>bílý hráč</p>
+		</div>
+
+		<div class="barva-Adela">
+			<p>černý hráč</p>
+		</div>
+	</section>
+
+	<ul class="sachovnice">
+		<li class="figurky-1">
+			<img src="obrazky/figurky/strelec-cerna.svg" alt="strelec-cerna">
+		</li>
+		<li class="figurky-2">
+			<img src="obrazky/figurky/pesec-cerna.svg" alt="pesec-cerna">
+		</li>
+		<li class="figurky-3">
+			<img src="obrazky/figurky/pesec-cerna.svg" alt="pesec-cerna">
+		</li>
+		<li class="figurky-4">
+			<img src="obrazky/figurky/pesec-cerna.svg" alt="pesec-cerna">
+		</li>
+		<li class="figurky-5">
+			<img src="obrazky/figurky/pesec-bila.svg" alt="pesec-bila">
+		</li>
+		<li class="figurky-6">
+			<img src="obrazky/figurky/kun-bila.svg" alt="kun-bila">
+		</li>
+		<li class="figurky-7">
+			<img src="obrazky/figurky/kral-cerna.svg" alt="kral-cerna">
+		</li>
+		<li class="figurky-8">
+			<img src="obrazky/figurky/kral-bila.svg" alt="kral-bila">
+		</li>
+
+		<li class="figurky-9">
+			<img src="obrazky/figurky/vez-cerna.svg" alt="vez-cerna">
+		</li>
+		<li></li>
+		<li></li>
+		<li></li>
+		<li></li>
+		<li></li>
+		<li></li>
+		<li></li>
+
+		<li></li>
+		<li></li>
+		<li></li>
+		<li></li>
+		<li></li>
+		<li></li>
+		<li></li>
+		<li></li>
+
+		<li></li>
+		<li></li>
+		<li></li>
+		<li></li>
+		<li></li>
+		<li></li>
+		<li></li>
+		<li></li>
+
+		<li></li>
+		<li></li>
+		<li></li>
+		<li></li>
+		<li></li>
+		<li></li>
+		<li></li>
+		<li></li>
+
+		<li></li>
+		<li></li>
+		<li></li>
+		<li></li>
+		<li></li>
+		<li></li>
+		<li></li>
+		<li></li>
+
+		<li></li>
+		<li></li>
+		<li></li>
+		<li></li>
+		<li></li>
+		<li></li>
+		<li></li>
+		<li></li>
+
+		<li></li>
+		<li></li>
+		<li></li>
+		<li></li>
+		<li></li>
+		<li></li>
+		<li></li>
+		<li></li>
+	</ul>
+
+	<p class="vyhra">
+		Vyhrál černý!
+	</p>
+
+	<span class="tlacitko">
+		Hrát znovu
+	</span>
 </body>
 
 </html>
